# raspberrypi_crosscompile

./: .gitignore  CMakeLists.txt  PI.cmake  README.md  deploy.sh  main.cpp
